src/card/Card.scss
.card {
    position: relative;
    container-type: inline-size;
    background-size: cover;
    border: 1px solid black;
    border-radius: 4% / 6.1% ;
    aspect-ratio: 61 / 40;
    width: 100%;
    display: flex;
    overflow: hidden;
}


.name {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 20cqw;
    max-width: 100%;
    min-width: 100%;
    margin-top: 3.5cqw;
    height: fit-content;
    
    .title {
        font-family: Panforte Pro;
        font-weight: 600;
        font-size: 5.8cqw;
        text-transform: uppercase;
        display: flex;
        flex-direction: row;
        text-align: center;
        max-width: 48cqw;
        line-height: 1em;
        

        .text-icon-container {
            position: absolute;
            width: max-content;
        }

        :first-child.text-icon {
            margin-left: 2cqw;
        }

        .text-icon {
            height: 0.9em;
            margin-left: 1cqw;
        }
    }

    .latin {
        font-size: 5cqw;
        font-family: Dolce;
        line-height: 1em;
    }
}

.cost {
    position: absolute;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    height: fit-content;
    max-height: 18cqw;
    padding: 1cqw 1.5cqw 1cqw 3cqw;
    left: 0;
    top: 3cqw;
    background-color: rgba(255, 255, 255, 0.7);
    border-radius: 0 5cqw 5cqw 0;
    gap: 1cqw;
    min-width: 6.5cqw;
    justify-content: flex-end;

    img {
        height: 4.4cqw;
        max-width: 6.4cqw;
        flex-shrink: 1;
    }
}

.zones {
    position: absolute;
    display: flex;
    flex-direction: column;
    height: 22.5cqw;
    background-color: rgba(255, 255, 255, 0.7);
    border-radius: 0 5cqw 5cqw 0;
    left:0;
    top: 11.5cqw;
    gap: 1cqw;
    padding: 1cqw 1.5cqw 1cqw 3cqw;

    img {
        height: 5.6cqw;
    }

    .AnyCoral {
        height: 7cqw;
        margin: -0.4cqw;
    }
}

.zones.s {
    justify-content: flex-start;
}

.zones.st {
    justify-content: flex-start;
}

.zones.stm {
    justify-content: space-between;
}

.zones.tm {
    justify-content: flex-end;
}

.zones.t {
    justify-content: center;
}

.zones.m {
    justify-content: flex-end;
}

.zones.sm {
    justify-content: space-between;
}

.points {
    font-family: Panforte Pro;
    font-weight: 600;
    position: absolute;
    height: 7cqw;
    left: 0;
    top: 37cqw;
    font-size: 7cqw;
    margin-left: 3cqw;

    img {
        height: 100%;
        position: relative;
        top: 2cqw;
        right: 2.5cqw;
    }
}

.length {
    font-family: Panforte Pro;
    font-weight: 600;
    line-height: 0.65em;
    position: absolute;
    left: 0;
    top: 48cqw;
    font-size: 5cqw;
    margin-left: 4cqw;
    width: 7.95cqw;
    text-align: center;
    padding-top: 0.35em;
    
    img {
        height: 11cqw;
        opacity: 0.5;
    }
}

.ability-container {
    position: relative;
    right: 28cqw;
    padding-top: 1cqw;
    height: calc(100% - 1cqw);
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-width: 28cqw;
    gap: 2cqw;

    .ability {
        width: 100%;
        background-size: cover;
        min-height: 20cqw;
        font-size: 4.1cqw;
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 1cqw;
        padding: 3cqw 0 5cqw 0;
        line-height: 1em;
        justify-content: space-around;

        img {
            height: 9cqw;
        }

        .ability-text {
            font-weight: normal;
            padding-left: 4cqw;
            text-wrap: balance;
        }

        .ability-text.bold {
            font-weight: bold;
        }

        .ability-points {
            font-weight: bold;
            font-size: 1.6em;
            display: flex;
            margin-top: 1cqw;

            img {
                position: relative;
                margin-left: -3.5cqw;
                bottom: 1.5cqw;
            };
        }

        .SchoolFeederMove {
            height: 12.5cqw;
        }

        .ArrowDown {
            height: 15cqw;
            margin: -5cqw 0;
            z-index: 1;
        }

        .AllPlayers {
            filter: drop-shadow(0 0 4px #404040);
            position: absolute;
            bottom: 4cqw;
        }

        .YoungFish {
            height: 6.5cqw;
            margin-bottom: 1.5cqw;
        }

        .UnSchoolFish {
            height: 16cqw;
            margin: -1.5cqw;
        }

        .AnyCoral {
            height: 12cqw;
            margin: -1.2cqw;
        }

        .FishLengthSmall, .FishLengthMedium, .FishLengthLarge {
            height: 12cqw;
            margin-bottom: -1.5cqw;
        }

        .Discard, .DrawCard, .FishFromHand, .ConsumeFish, .ConsumeFish1, .ConsumeFish2, .ConsumeFish3 {
            height: 8cqw;
        }

        &.also-if {
            padding: 3cqw 1cqw;
            gap: 0.7cqw;
            display: inline;
            text-align: center;
            width: unset;

            img {
                height: 7cqw;
                max-height: 7cqw;
            }
        }

        &.squished {
            padding: 2cqw 0;
            min-height: unset;
            margin-top: 4cqw;
        }

        .ability-row {
            padding: 0 1cqw;
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            justify-content: center;

            img {
                max-height: 7cqw;
                max-width: 8cqw;
            }

            .ability-text {
                padding: 0 1cqw;
                font-weight: bold;
            }

            .SchoolFish {
                max-height: unset;
                max-width: unset;
            }
        }
    }
}

.description {
    position: absolute;
    top: 50cqw;
    left: 22cqw;
    width: 50cqw;
    font-family: Lexus Roman Optical;
    font-size: 2.5cqw;
    text-wrap: pretty;

}

.silhouette {
    position: absolute;
    top: 19cqw;
    left: 22cqw;
    max-width: 48cqw;
    max-height: 34cqw;
}

.expansion-logo {
    position: absolute;
    bottom: 2cqw;
    right: 1.5cqw;
    height: 3cqw;
    opacity: 0.9;
}

.corner-overlay {
    position: absolute;
    width: 7.5cqw;
    height: 7.5cqw;
    background-color: #707176;
  }
  
.top-left {
    top: -1px;
    left: -1px;
    clip-path: polygon(0 0, 0% 100%, 100% 0);
}

.bottom-right {
    bottom: -1px;
    right: -1px;
    clip-path: polygon(100% 100%, 0 100%, 100% 0);
}

.icon-group {
    display: inherit;
    flex-direction: column;

    &.AnyCoral-3 {
        display: inline-flex;
        flex-wrap: wrap;
        justify-content: center;
        width: 23cqw;
        vertical-align: middle;
        flex-direction: row;

        > .AnyCoral {
            height: 7.5cqw;
            width: 7.5cqw;
            margin: -0.5cqw;
        }
    }

    &.PurpleCoral-3 {
        display: inline-flex;
        flex-wrap: wrap;
        justify-content: center;
        width: 23cqw;
        vertical-align: middle;
        flex-direction: row;

        > .PurpleCoral {
            height: 9.5cqw!important;
            max-height: 9.5cqw!important;
            width: 9.5cqw!important;
            margin: -0.5cqw;
        }
    }

    &.AnyCoral-5 {
        display: inline-flex;
        flex-wrap: wrap;
        justify-content: center;
        width: 23cqw;
        vertical-align: middle;
        flex-direction: row;


        > .FishFromHand {
            flex: 0 0 100%;
            height: 7cqw;
            object-fit: contain;
        }

        > .ArrowDown {
            flex: 0 0 100%;
            margin-bottom: -2cqw;
            margin-left: 2cqw;
            object-fit: contain;
        }

        > .AnyCoral {
            height: 7.5cqw;
            width: 7.5cqw;
            margin: -0.5cqw;
        }
    }

    &.AnyCoral-3 {
        display: inline-flex;
        flex-wrap: wrap;
        justify-content: center;
        width: 23cqw;
        vertical-align: middle;
        flex-direction: row;


        > .FishFromHand {
            flex: 0 0 100%;
            height: 7cqw;
            object-fit: contain;
        }

        > .ArrowDown {
            flex: 0 0 100%;
            margin-bottom: -2cqw;
            margin-left: 2cqw;
            object-fit: contain;
        }

        > .AnyCoral {
            height: 7.5cqw;
            width: 7.5cqw;
            margin: -0.5cqw;
        }
    }
}

